RESOLVED FIXED311963
[Navigation API] Fix missing tracker cleanup in same-document handler rejection
https://bugs.webkit.org/show_bug.cgi?id=311963
Summary [Navigation API] Fix missing tracker cleanup in same-document handler rejection
Basuke Suzuki
Reported 2026-04-10 12:37:28 PDT
In handleSameDocumentNavigation(), when the wrapper promise is rejected (handler promise failure), the finishedPromise is rejected but cleanupAPIMethodTracker() is never called. The ongoing tracker leaks in m_ongoingAPIMethodTracker. rdar://174513527
Attachments
Basuke Suzuki
Comment 1 2026-04-10 14:03:51 PDT
Basuke Suzuki
Comment 2 2026-04-10 14:04:08 PDT
EWS
Comment 3 2026-04-13 20:47:23 PDT
Committed 311159@main (93725f4afeda): <https://commits.webkit.org/311159@main> Reviewed commits have been landed. Closing PR #62483 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.